# WrinkledTensionFields

./: .gitignore  .gitmodules  CMakeLists.txt  CommonFunctions.h  readme.md
MeshLib/: CMakeLists.txt  MeshConnectivity.h
SecondFundamentalForm/: CMakeLists.txt
TFWShell/: CMakeLists.txt  CommonFunctions.cpp  CommonFunctions.h  MeshUpsampling.cpp  MeshUpsampling.h  PhiEstimate.cpp  PhiEstimate.h  TFWModel.cpp  TFWModel.h  TFWSetup.cpp  TFWSetup.h  TFWShell.cpp  TFWShell.h  TFWState.cpp  TFWState.h  findCorners.cpp  findCorners.h
Wrappers/: CMakeLists.txt  CoMISoWrapper.cpp  CoMISoWrapper.h  EigenNASOQ.cpp  EigenNASOQ.h
checkpoints/: x1  x10  x11  x12  x13  x14  x15  x16  x2  x3  x4  x413  x5  x6  x7  x8  x812  x9
src/: CMakeLists.txt  main.cpp
